dummyproductinitializer final refactoring remove @Transactional & rollback function + seperate thumbnail, option because running without log + rollback 25/12/21