@@ -13,10 +13,8 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Component;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -29,12 +27,20 @@ public class DummyProductInitializer implements CommandLineRunner {
     /**
      * 클래스 목적
      * 로컬 환경에서 테스트용으로 더미 상품 데이터를 DB에 넣고, Admin 화면에서 CRUD 및 상품 리스트 확인
+     * -> 검증 목적이 아닌, 화면 테스트 및 초기 데이터 제공 목적 (entity + repository)
      * 
-     * 핵심 포인트
+     * 핵심 포인트 12/20
      * - 외부 이미지 URL 사용: 로컬에 이미지 저장 없이 URL로 바로 렌더링
      * - Controller에 더미 데이터 넣지 않음: DB 초기화용, DummyProductInitializer 로 분리
      * - DTO 사용: 화면용 데이터 (AdminProductResponseDto) 로 변환
      * - Thymeleaf 와 연동: productList.html 에서 DTO 기반 반복 렌더링
+     *
+     * 리팩토링 12/21
+     * 1. @Transactional 제거
+     *   - 더미 초기화 시, validation / flush 에러를 즉시 확인하기 위해
+     *   - CommandLineRunner 에서는 트랜잭션을 제거했다.
+     * 2. Thumbnail 옵션 루트 밖에서 생성
+     *   - 썸네일은 상품 대표 이미지 개념이기 때문에 PM 과 독립적으로 1회만 생성 되도록 분리
      */
 
     private final ProductRepositoryV1 productRepository;
@@ -42,11 +48,13 @@ public class DummyProductInitializer implements CommandLineRunner {
     private final Random random = new Random();
 
     @Override
-    @Transactional
-    public void run(String... args) throws Exception {
+    public void run(String... args) {
+        createDummyProducts();
+    }
 
+    private void createDummyProducts() {
         // 상품명 + 외부 이미지 URL
-        List<String> productNames = Arrays.asList(
+        List<String> productNames = List.of(
                 "2025 맨유 홈 저지",
                 "2025 맨유 어웨이 저지",
                 "2025 맨유 서드 저지",
@@ -59,7 +67,7 @@ public class DummyProductInitializer implements CommandLineRunner {
                 "맨유 THIRD 반팔 티"
         );
 
-        List<String> imageUrls = Arrays.asList(
+        List<String> imageUrls = List.of(
                 "https://store.manutd.com/media/catalog/product/cache/8f0c8c95c03f3dc1615e62d6b91e2b36/m/u/mufc_2025_home_jersey.jpg",
                 "https://store.manutd.com/media/catalog/product/cache/8f0c8c95c03f3dc1615e62d6b91e2b36/m/u/mufc_2025_away_jersey.jpg",
                 "https://store.manutd.com/media/catalog/product/cache/8f0c8c95c03f3dc1615e62d6b91e2b36/m/u/mufc_2025_third_jersey.jpg",
@@ -74,53 +82,57 @@ public class DummyProductInitializer implements CommandLineRunner {
 
         for (int i = 0; i < productNames.size(); i++) {
             try {
-                String productName = productNames.get(i);
-                String thumbnailUrl = imageUrls.get(i);
+                Product product = createProduct(productNames.get(i));
+                addThumbnail(product, imageUrls.get(i));
+                productRepository.save(product); // cascde 로 thumbnail 함께 저장
 
-                Product product = Product.createDummy(
-                        productName,
-                        ProductType.values()[random.nextInt(ProductType.values().length)],
-                        BigDecimal.valueOf(100_000 + random.nextInt(200_000)),
-                        productName + " 상세 정보",
-                        "MANUTD Official",
-                        true,             // isDiscount
-                        random.nextInt(50),  // discountRate
-                        true
+                createOptions(product);
+
+                log.info("Dummy product created: {}", product.getProductName());
+            } catch (Exception e) {
+                log.error("Dummy product failed: {}", productNames.get(i), e);
+            }
+        }
+    }
+
+    /** Product 생성 */
+    private Product createProduct(String productName){
+        return Product.createDummy(
+                productName,
+                ProductType.values()[random.nextInt(ProductType.values().length)],
+                BigDecimal.valueOf(100_000 + random.nextInt(200_000)),
+                productName + " 상세 정보",
+                "MANUTD Official",
+                true,             // isDiscount
+                random.nextInt(50),  // discountRate
+                true
+        );
+    }
+
+    /** Thumbnail 1회만 생성 */
+    private void addThumbnail(Product product, String imageUrl) {
+        ProductThumbnail thumbnail = new ProductThumbnail(product, imageUrl);
+        product.addThumbnail(thumbnail);
+    }
+
+    /** 옵션 생성 */
+    private void createOptions(Product product) {
+        for (Gender gender : Gender.values()) {
+            for (Size size : Size.values()) {
+                ProductManagement pm = ProductManagement.of(
+                        product,
+                        null,
+                        null,
+                        size,
+                        20L,
+                        true,
+                        false,
+                        false
                 );
-                // DB에 상품 저장
-                productRepository.save(product);
-
-                // 옵션 생성
-                for (Gender gender : Gender.values()) {
-                    for (Size size : Size.values()) {
-                        ProductManagement pm = ProductManagement.of(
-                                product,
-                                null,
-                                null,
-                                size,
-                                10L + random.nextInt(20),
-                                true,
-                                false,
-                                false
-                        );
-                        pm.setGender(gender);
-                        productManagementRepository.save(pm);
-
-                        // (기존) uploadFile -> server save -> 경로 생성 -> DB 저장
-                        // (리팩토링) 외부 이미지 URL 확보 -> 문자열로 DB 저장
-                        // externalUrl = 이미지의 '위치 정보'
-                        String externalUrl = imageUrls.get(i);
-                        ProductThumbnail thumbnail = new ProductThumbnail(product, externalUrl);
-                        product.addThumbnail(thumbnail);
-                    }
-                }
-
-                // DTO에서 바로 외부 URL 사용 가능하므로 별도 저장 불필요
-                log.info("Dummy product created: {} -> {}", productName, thumbnailUrl);
-
-            } catch (Exception ex) {
-                log.error("Dummy product init failed at index {}: {}", i, ex.getMessage(), ex);
+                pm.setGender(gender);
+                productManagementRepository.save(pm);
             }
         }
     }
 }
+
